--- a/index.html
+++ b/index.html
@@ -3,6 +3,33 @@
     <head>
         <title>Page Title</title>
         <link rel="stylesheet" href="styles.css">
+        <script>
+                alert("Still in work but its public so you can see my journey on making my new blog :D");
+    function home() {
+        document.getElementById("homebtn").className = "tabactive";
+        document.getElementById("contactbtn").className = "";
+        document.getElementById("infobtn").className = "";
+        document.getElementById("home").style.display = "block";
+        document.getElementById("info").style.display = "none";
+        document.getElementById("contact").style.display = "none";
+    }
+    function contact() {
+        document.getElementById("contactbtn").className = "tabactive";
+        document.getElementById("homebtn").className = "";
+        document.getElementById("infobtn").className = "";
+        document.getElementById("home").style.display = "none";
+        document.getElementById("info").style.display = "none";
+        document.getElementById("contact").style.display = "block";
+    }
+    function info() {
+        document.getElementById("infobtn").className = "tabactive";
+        document.getElementById("homebtn").className = "";
+        document.getElementById("contactbtn").className = "";
+        document.getElementById("home").style.display = "none";
+        document.getElementById("info").style.display = "block";
+        document.getElementById("contact").style.display = "none";
+    }
+        </script>
     </head>
     <body>
         <header><h4><img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_512.png"/>Bob's Blog</h4></header>
@@ -40,7 +67,7 @@
                 <h4>Jeroo</h4>
                 <progress max="100" value="100" align="left" id="jeroo"></progress>
                 <h4>Java</h4>
-                <progress max="100" value="10" align="left" id="java"></progress>
+                <progress max="100" value="60" align="left" id="java"></progress>
             </div>
         </div>
         <footer>
