--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
         <style>
             body {
                 padding:10;
+                background-color:#222222;
+                font-family:arial;
+                color:#00bd8b;
             }
         </style>
         <script>
@@ -19,7 +22,8 @@
         </script>
     </head>
     <body align="center">
-        <canvas width="1280px" height="720px" style="border:1px solid black;" id="cv"></canvas>
+        <h1>World Trigger Character</h1>
+        <canvas width="1280px" height="720px" style="border:2px solid black;" id="cv"></canvas>
+        <img src="https://cdn.discordapp.com/attachments/571784589882949692/586283372939182263/unknown-14.png" style="display:none;" id="original"/>
     </body>
-    <img src="https://cdn.discordapp.com/attachments/571784589882949692/586283372939182263/unknown-14.png" style="display:none;" id="original"/>
 </html>
