--- a/index.html
+++ b/index.html
@@ -87,6 +87,17 @@
                 reset();
                 getTrigs();
                 getParams();
+                ctx.beginPath();
+                ctx.fillStyle = "black";
+                ctx.globalAlpha = .75;
+                ctx.moveTo(812,267);
+                ctx.lineTo(867,330);
+                ctx.lineTo(917,386);
+                ctx.lineTo(812,478);
+                ctx.lineTo(783,414);
+                ctx.lineTo(785,386);
+                ctx.lineTo(765,339);
+                ctx.fill();
             }
         </script>
     </head>
