--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <script>
             var ctx;
             var canvas;
-            var ty = 0, ax = 0, ay = 0;
+            var ty = 0, ax = 0, ay = 0, dx = 0, dy = 0;
             var name, ranking, emblem;
             var trion, attack, defense, mobility, skill, range, command, tactics, total;
             var img;
@@ -168,6 +168,53 @@
                         ay = 294;
                 }
             }
+            function getDefense(dr) {
+                switch(dr) {
+                    case "1":
+                        dx = 825;
+                        dy = 386;
+                    break;
+                    case "2":
+                        dx = 838;
+                        dy = 386;
+                    break;
+                    case "3":
+                        dx = 851;
+                        dy = 386;
+                    break;
+                    case "4":
+                        dx = 864;
+                        dy = 386;
+                    break;
+                    case "5":
+                        dx = 878;
+                        dy = 386;
+                    break;
+                    case "6":
+                        dx = 891;
+                        dy = 386;
+                    break;
+                    case "7":
+                        dx = 904;
+                        dy = 386;
+                    break;
+                    case "8":
+                        dx = 917;
+                        dy = 386;
+                    break;
+                    case "9":
+                        dx = 930;
+                        dy = 386;
+                    break;
+                    case "10":
+                        dx = 942;
+                        dy = 386;
+                    break;
+                    default:
+                        dx = 942;
+                        dy = 386;
+                }
+            }
             function draw() {
                 reset();
                 getTrigs();
@@ -178,9 +225,11 @@
                 
                 getTrion(trion);
                 getAttack(attack);
+                getDefense(defense);
+                
                 ctx.moveTo(812,ty);
                 ctx.lineTo(ax,ay);
-                ctx.lineTo(917,386);
+                ctx.lineTo(dx,dy);
                 ctx.lineTo(812,478);
                 ctx.lineTo(783,414);
                 ctx.lineTo(785,386);
