--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <script>
             var ctx;
             var canvas;
-            var ty = 0, ax = 0, ay = 0, dx = 0, dy = 0;
+            var ty = 0, ax = 0, ay = 0, dx = 0, dy = 0, mx = 0, my = 0, sx = 0, sy = 0, rx = 0, ry = 0;
             var name, ranking, emblem;
             var trion, attack, defense, mobility, skill, range, command, tactics, total;
             var img;
@@ -215,6 +215,146 @@
                         dy = 386;
                 }
             }
+            function getMobility(mr) {
+                switch(mr) {
+                    case "1":
+                        mx = 821;
+                        my = 395;
+                    break;
+                    case "2":
+                        mx = 830;
+                        my = 404;
+                    break;
+                    case "3":
+                        mx = 840;
+                        my = 414;
+                    break;
+                    case "4":
+                        mx = 849;
+                        my = 423;
+                    break;
+                    case "5":
+                        mx = 859;
+                        my = 433;
+                    break;
+                    case "6":
+                        mx = 868;
+                        my = 442;
+                    break;
+                    case "7":
+                        mx = 877;
+                        my = 451;
+                    break;
+                    case "8":
+                        mx = 886;
+                        my = 460;
+                    break;
+                    case "9":
+                        mx = 896;
+                        my = 470;
+                    break;
+                    case "10":
+                        mx = 904;
+                        my = 478;
+                    break;
+                    default:
+                        mx = 904;
+                        my = 478;
+                }
+            }
+            function getSkill(sr) {
+                switch(sr) {
+                    case "1":
+                        sx = 812;
+                        sy = 399;
+                    break;
+                    case "2":
+                        sx = 812;
+                        sy = 412;
+                    break;
+                    case "3":
+                        sx = 812;
+                        sy = 425;
+                    break;
+                    case "4":
+                        sx = 812;
+                        sy = 439;
+                    break;
+                    case "5":
+                        sx = 812;
+                        sy = 452;
+                    break;
+                    case "6":
+                        sx = 812;
+                        sy = 465;
+                    break;
+                    case "7":
+                        sx = 812;
+                        sy = 478;
+                    break;
+                    case "8":
+                        sx = 812;
+                        sy = 491;
+                    break;
+                    case "9":
+                        sx = 812;
+                        sy = 504;
+                    break;
+                    case "10":
+                        sx = 812;
+                        sy = 515;
+                    break;
+                    default:
+                        sx = 812;
+                        sy = 515;
+                }
+            }
+            function getRange(rr) {
+                switch(rr) {
+                    case "1":
+                        rx = 802;
+                        ry = 395;
+                    break;
+                    case "2":
+                        rx = 792;
+                        ry = 405;
+                    break;
+                    case "3":
+                        rx = 783;
+                        ry = 414;
+                    break;
+                    case "4":
+                        rx = 774;
+                        ry = 423;
+                    case "5":
+                        rx = 764;
+                        ry = 433;
+                    break;
+                    case "6":
+                        rx = 755;
+                        ry = 442;
+                    break;
+                    case "7":
+                        rx = 745;
+                        ry = 452;
+                    break;
+                    case "8":
+                        rx = 736;
+                        ry = 461;
+                    break;
+                    case "9":
+                        rx = 727;
+                        ry = 470;
+                    break;
+                    case "10":
+                        rx = 720;
+                        ry = 477;
+                    break;
+                    default:
+                        rx = 720;
+                        ry = 477;
+                }
+            }
             function draw() {
                 reset();
                 getTrigs();
@@ -226,12 +366,16 @@
                 getTrion(trion);
                 getAttack(attack);
                 getDefense(defense);
+                getMobility(mobility);
+                getSkill(skill);
+                getRange(range);
                 
                 ctx.moveTo(812,ty);
                 ctx.lineTo(ax,ay);
                 ctx.lineTo(dx,dy);
-                ctx.lineTo(812,478);
-                ctx.lineTo(783,414);
+                ctx.lineTo(mx,my);
+                ctx.lineTo(sx,sy);
+                ctx.lineTo(rx,ry);
                 ctx.lineTo(785,386);
                 ctx.lineTo(765,339);
                 ctx.fill();
