--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
     <head>
         <title>World Trigger OC Template</title>
         <style>
+            @font-face {
+                font-family: 'crusader';
+                src: url('StrikerEurekaPERSONALUSE-Cut.ttf') format('truetype');
+                font-weight: 500;
+                font-style: normal;
+            }
+
             body {
                 padding:10;
                 background-color:#222222;
-                font-family:arial;
+                font-family:crusader;
                 color:#00bd8b;
             }
             img {
