--- a/rigged.html
+++ b/rigged.html
@@ -26,14 +26,14 @@
         }
         #Bobbar {
             position:absolute;
-            left:5;
+            left:5px;
             padding:15px;
             border:1px solid black;
             width:40%;
         }
         #Hysubar {
             position:absolute;
-            right:5;
+            right:5px;
             padding:15px;
             border:1px solid black;
             width:40%;
